zeit.cms changes
================

1.21.1 (unreleased)
-------------------

- ListRepresentation für CommonMetadata hinzugefügt.

- Basisklasse für JSON-Views aus zeit.find in den Kern verschoben.

1.21 (2009-05-18)
-----------------

- Objekte mit der Serie »News« werden automatisch in den News-Channel
  syndiziert. Der News-Channel wird automatisch veröffentlicht (#5270).

1.20.2 (2009-05-17)
-------------------

- Übersetzung einer Fehlemeldung im Workflow repariert.

1.20.1 (2009-05-17)
-------------------

- Nach dem Umbenennen eines Objekts befindet man sich auf dem Ordner, nicht auf
  dem umbenannten Objekt.

- Hilfsfunktion um beliebigen Ordner in Abhängigkeit von der aktuellen Ausgabe
  zu bekommen um Vorlagen erweitert. Dies ermöglicht z.B.
  'online/$year/$volume/berlin'

1.20 (2009-05-15)
-----------------

- Adapter für den Publikationsstatus (veröffentlich, mit Änderungen, nicht
  veröffentlicht) hinzugefügt (#5320).

- Views zum Umbenennen von Ordnern mit einer extra Permission abgesichert
  (#5319).

- Sichergestellt, dass immer nur genau ein Tooltip angezeigt wird. Tooltips
  werden nicht angezeigt, wenn eine DragAndDrop-Operation durchgeführt wird.

- Die Lightbox registriert den Submit-Eventhandler nur noch genau für die
  Submit-Buttons, nicht für *alle* Buttons.

- Alle `test.py` nach `tests.py` umbenannt.

- Lokalisierung herausgelöst und nach ``zeit.locales`` verschoben. Dort werden
  Übersetzungen mit anderen Paketen zusammengefasst.

- JS Tab- und View-Klassen aus zeit.find extrahiert und generalisiert.

1.19.5 (2009-05-08)
-------------------

- TooltipMangager hinzugefügt, der den Tooltip-Text vom jeweiligen DOM-Element
  holt.

1.19.4 (2009-05-07)
-------------------

- Korrektes Verwenden des DAV-Such-Interfaces (repaiert Adaptieren eines
  UUID-Objektes auf ICMSContent liefert das Objekt zur UUID).

1.19.3 (2009-05-07)
-------------------

- Test-Basisklasse zeit.cms.testing.FunctionalTestCase hinzugefügt.
